k8s/pipelines.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipelines
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines
  template:
    metadata:
      labels:
        app: pipelines
    spec:
      containers:
      - name: pipelines
        image: ghcr.io/open-webui/pipelines:main
        volumeMounts:
        - name: pipelines-data
          mountPath: /app/pipelines
      volumes:
      - name: pipelines-data
        persistentVolumeClaim:
          claimName: pipelines-pvc
